2017-06-26  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/stk_dataframe.m: Fix typo

	* arrays/@stk_dataframe/stk_dataframe.m: Fix typo.

2017-06-25  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/fieldnames.m: Add row names to the list

	* arrays/@stk_dataframe/fieldnames.m: Add row names.  Also, do not
	include empty row or column names in the list.

2017-06-24  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_sampling_sobol.m: Fix help text

	* sampling/stk_sampling_sobol.m: Fix help text.

	build_octpkg.m: Add 'License:' in DESCRIPTION

	* admin/build_tools/build_octpkg.m: Add 'License:' in DESCRIPTION.
	* admin/build_tools/generate_htmldoc.m: Remove 'Read License" subst.

	@stk_dataframe/stk_sprintf.m: Improve formatting for empty data frames

	* arrays/@stk_dataframe/stk_sprintf.m: Improve formatting for
	empty data frames.  In particular, display column names or row
	names if appropriate.
	* arrays/@stk_dataframe/disp.m: Source formatting.
	* arrays/generic/stk_sprintf.m: Fix help text.  Source formatting.

2017-06-23  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dataframe.m: Guess the size when the first input is empty

	* arrays/@stk_dataframe/stk_dataframe.m: Deduce the number of
	columns and rows from the length of colnames and rownames,
	respectively, when the first input argument is empty.  Note that
	this patch changes the object generated by the default constructor.

2017-06-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv.m: Accept @stkçdataframe inputs

	* misc/pareto/stk_dominatedhv.m: Tolerate any kind of input
	argument that can be converted to a double precision matrix, in
	particular @stk_dataframe objects.

2017-06-16  Julien Bect  <julien.bect@centralesupelec.fr>

	Don't use ~ to ignore output arguments (see CG#07)

	* admin/CODING_GUIDELINES: Improve CG#07
	* sampling/stk_sampcrit_akg_eval.m: Apply CG#07
	* sampling/stk_sampling_nesteddesign.m: Apply CG#07